--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     background-color: rebeccapurple;
     color: white;
     font-family: 'Baloo Paaji 2', cursive;
+    font-size: 200%;
 }
 
 .container {
